# fastapi-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: backend_pre_start.py  main.py
app/api/: exceptions.py  permissions_base.py
app/api/api_v1/: dependencies.py
app/core/: config.py
app/crud/: base.py
app/db/: init_db.py  session.py
app/models/: base.py
app/tests/: conftest.py
