[tool.poetry]
name = "ofd"
version = "0.1.0"
description = ""
authors = ["Daulet <daulet.abduali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tenacity = "^8.0.1"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
pre-commit = "^2.20.0"
httpx = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
autopep8 = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
